<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="onelance.com.loginandregister.Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:layout_marginTop="50px"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >

        <TextView
            android:id="@+id/Rtxt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Rtxt1"
            android:textColor="@color/textColor"
            android:id="@+id/RName"
            />

        <TextView
            android:id="@+id/Rtxt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/RName"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Rtxt2"
            android:textColor="@color/textColor"
            android:id="@+id/REmail"
            android:inputType="textEmailAddress"

            />

        <TextView
            android:id="@+id/Rtxt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/RPassword"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/REmail"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Rtxt3"
            android:textColor="@color/textColor"
            android:id="@+id/RPassword"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/Rtxt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/RCPassword"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/RPassword"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Rtxt4"
            android:textColor="@color/textColor"
            android:id="@+id/RConPassword"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/Rtxt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/Phone"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/RConPassword"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Rtxt5"
            android:textColor="@color/textColor"
            android:id="@+id/RPhone"
            android:inputType="number"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RSignUp"
            style="?android:textAppearanceSmall"
            android:textColor="@color/textColor"
            android:id="@+id/RSignUp"
            android:layout_below="@+id/RPhone"
            android:layout_marginTop="25dp"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>